--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <div class="weapons">
+        <button class="btn" id="Rock">Rock</button>
+        <button class="btn" id="Paper">Paper</button>
+        <button class="btn" id="Scissors">Scissors</button>
+    </div>
 </body>
 </html>
