refactor: Add text content to DOM and fix bug
Added text content to DOM depending on the result of playRound() and fixed a bug where no result was shown if user chose Scissors and computer chose Paper(I accidentally deleted the line)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button class="btn" id="Paper">Paper</button>
         <button class="btn" id="Scissors">Scissors</button>
     </div>
+    <p class="result"></p>
     <script src="script.js"></script>
 </body>
 </html>
