--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button class="btn" id="Scissors">Scissors</button>
     </div>
     <p class="result"></p>
+    <p class="score"></p>
     <script src="script.js"></script>
 </body>
 </html>
