--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <p class="result"></p>
     <p class="score"></p>
+    <h2 class="winner"></h2>
     <script src="script.js"></script>
 </body>
 </html>
