--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300italic,regular,italic,500,500italic,700,700italic" rel="stylesheet" />
 </head>
 <body>
-    <div class="weapons">
-        <button class="btn" id="Rock">Rock</button>
-        <button class="btn" id="Paper">Paper</button>
-        <button class="btn" id="Scissors">Scissors</button>
+    <p class="result">Choose your weapon wisely and may fortune favor the bold!</p>
+    <div class="scores">
+        <p class="player-score">Your Score: 0</p>
+        <p class="computer-score">Computer Score: 0</p>
     </div>
-    <p class="result"></p>
-    <p class="score"></p>
-    <h2 class="winner"></h2>
+        <div class="weapons">
+            <button class="btn" id="Rock"></button>
+            <button class="btn" id="Paper"></button>
+            <button class="btn" id="Scissors"></button>
+        </div>
+        <h2 class="narration">Welcome, brave warrior, to the realm of Rock, Paper, Scissors! Prepare to engage in a battle of wits and strategy, where ancient traditions clash with the technology of tomorrow... </h2>
     <script src="script.js"></script>
 </body>
 </html>
