--- a/index.html
+++ b/index.html
@@ -9,17 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300italic,regular,italic,500,500italic,700,700italic" rel="stylesheet" />
 </head>
 <body>
-    <p class="result">Choose your weapon wisely and may fortune favor the bold!</p>
-    <div class="scores">
-        <p class="player-score">Your Score: 0</p>
-        <p class="computer-score">Computer Score: 0</p>
-    </div>
-        <div class="weapons">
-            <button class="btn" id="Rock"></button>
-            <button class="btn" id="Paper"></button>
-            <button class="btn" id="Scissors"></button>
-        </div>
-        <h2 class="narration">Welcome, brave warrior, to the realm of Rock, Paper, Scissors! Prepare to engage in a battle of wits and strategy, where ancient traditions clash with the technology of tomorrow... </h2>
-    <script src="script.js"></script>
+    <h1 class="heading">Rock Paper Scissors!</h1>
+    <p class="intro">In a realm steeped in ancient prophecies and futuristic intrigue, two mighty factions collide. Legends foretold of a cosmic equilibrium that could only be achieved through the ultimate trial of Rock, Paper, Scissors. The stakes are high, as the honor and fate of their respective realms hang in the balance. With echoes of valor and whispers of destiny, these valiant warriors step onto the ethereal battleground, embodying the timeless rivalry that has ignited across realms. The clash of hands, guided by unwavering resolve, shall decide the course of their intertwined histories, as the ancient past converges with the boundless future in an extraordinary showdown of strategy and fate...</p>
+    <button class="class" id="start">Start Game</button>
+    <script src="main.js"></script>
 </body>
 </html>
