Add reset button

--- a/game.html
+++ b/game.html
@@ -20,6 +20,6 @@
             <button class="btn" id="Scissors"></button>
         </div>
         <h2 class="narration">Welcome, brave warrior, to the realm of Rock, Paper, Scissors! Prepare to engage in a battle of wits and strategy, where ancient traditions clash with the technology of tomorrow... </h2>
-    <script src="script.js"></script>
+        <script src="main.js"></script>
 </body>
 </html>
