--- a/game.html
+++ b/game.html
@@ -24,9 +24,7 @@
                 <div class="title"></div>
                 <button data-popup-close class="close-button">&times;</button>
             </div>
-            <p class="popup-body">
-                
-            </p>
+            <p class="popup-body"></p>
         </div>
         <div  id="overlay"></div>
         <h2 class="narration">Welcome, brave warrior, to the realm of Rock, Paper, Scissors! Prepare to engage in a battle of wits and strategy, where ancient traditions clash with the technology of tomorrow... </h2>
