Change .intro text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 class="heading">Rock Paper Scissors!</h1>
-    <p class="intro">In a realm steeped in ancient prophecies and futuristic intrigue, two mighty factions collide. Legends foretold of a cosmic equilibrium that could only be achieved through the ultimate trial of Rock, Paper, Scissors. The stakes are high, as the honor and fate of their respective realms hang in the balance. With echoes of valor and whispers of destiny, these valiant warriors step onto the ethereal battleground, embodying the timeless rivalry that has ignited across realms. The clash of hands, guided by unwavering resolve, shall decide the course of their intertwined histories, as the ancient past converges with the boundless future in an extraordinary showdown of strategy and fate...</p>
+    <p class="intro">In a realm of ancient prophecies and futuristic intrigue, two factions collide in a trial of cosmic equilibrium. With honor and fate hanging in the balance, valiant warriors step onto the ethereal battleground. Guided by unwavering resolve, their clash of hands shapes intertwined histories, where strategy and fate converge in an extraordinary showdown...</p>
     <button class="class" id="start">Start Game</button>
     <script src="script.js"></script>
 </body>
