Remove .active from .popup

--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
             <button data-popup-target="#popup" class="btn" id="Paper"></button>
             <button data-popup-target="#popup" class="btn" id="Scissors"></button>
         </div>
-        <div class="popup active" id="popup">
+        <div class="popup" id="popup">
             <div class="popup-header">
                 <div class="title"></div>
                 <button data-popup-close class="close-button">&times;</button>
